--- a/src/pages/css/LoginCadastro.css
+++ b/src/pages/css/LoginCadastro.css
@@ -2,15 +2,11 @@
   font-family: Arial, sans-serif;
 }
 
-.tela-logincadastro, .tela {
+.tela-logincadastro {
   background-color: #f1f4f5;
   height: 120vh;
   text-align  : center;
   font-family: "Roboto", sans-serif;
-}
-
-.escolha-logincadastro {
-  margin-top: 100px;
 }
 
   .botao-escolha {
@@ -33,12 +29,13 @@
   .profile {
     width: 100px;
     margin-top: 50px;
+    margin-bottom: -50px;
   }
 
   .cliente, .administrador {
     background-color: #ffffff;
     width: 370px;
-    height: 330px;
+    height: 400px;
     border-radius: 30px;
     box-shadow: rgba(107, 107, 107, 0.2) 0px 7px 29px 0px;
     border: 1px solid #ccc;
